[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprite/Baby.png" type="Texture" id=1]
[ext_resource path="res://baby.wav" type="AudioStream" id=2]
[ext_resource path="res://Font/No Virus.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Baby.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 3 )

[node name="Baby" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.811765, 0.811765, 1, 1 )
position = Vector2( -4.76837e-07, 0 )
scale = Vector2( 10, 10 )
frames = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -8.0
margin_top = -64.0
margin_right = 40.0
margin_bottom = -13.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "!"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Baby_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
